docs(docs-infra): fix for document overflow issue on template-driven-forms page

--- a/adev/shared-docs/styles/_resets.scss
+++ b/adev/shared-docs/styles/_resets.scss
@@ -9,7 +9,7 @@
       'Segoe UI Symbol', 'Noto Color Emoji';
     --page-width: 80ch;
     --layout-padding: 3.12rem; // a common padding value throughout the layout
-    --primary-nav-width: 110px;
+    --primary-nav-width: 6.875rem;
     --secondary-nav-width: 16.25rem;
     --fixed-content-height: calc(100vh - var(--layout-padding) * 2);
 
@@ -277,6 +277,9 @@
 
   // Tabs inside Example Viewer Header
   .docs-example-viewer-actions {
+    // Adjusted width - as tabs were overflowing when they were too many
+    max-width: calc(100vw - var(--secondary-nav-width) - var(--primary-nav-width) - var(--layout-padding)*2 );
+
     .mat-mdc-tab-labels {
       width: 100%;
     }
